--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 # ----------------------- #
 
 url: www.vmthunder.org
-title: VMThunder
-subtitle: Booting a large number of virtual machines in a minute!
+title: Booting 1000 VMs in a minute!
+subtitle:
 author: lihuiba
 simple_search: http://google.com/search
 description:
