--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: www.vmthunder.org
-title: Booting 1000 VMs in a minute!
+url: http://www.vmthunder.org/VMThunder
+title: VMThunder ---- Booting 1000 VMs in a minute!
 subtitle:
 author: lihuiba
 simple_search: http://google.com/search
